# app/Http/Controllers/api/CategoryApiController.php
@@ -7,6 +7,18 @@ use App\Models\Category;
 
 class CategoryApiController extends Controller
 {
+    /**
+     * @OA\Get(
+     *  path="/api/categories",
+     *  summary = "Получение всех категорий",
+     *  tags={"Categories"},
+     * @OA\Response(
+     *  response=200,
+     *  description="successful operation",
+     * ),
+     *  )
+     *
+     */
     public function getAllCategories()
     {
         return response()->json(Category::all());
